fix: overflow-x hidden for html quickfix

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 /* Make scroll bars in preview mode dark */
 @media (prefers-color-scheme: dark) {
   html {
